--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "one-rep-max",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://vbrambila2.github.io/1RM-Calculator/",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
